Mudança da cor principal do css

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-    --main-color: #00eeff ;
+    --main-color: #4b20e7 ;
     --text-color: #ffffff;
     --bg-color-01: #1f242d;
     --bg-color-02: #323946;
